--- a/TodoList/Todo.html
+++ b/TodoList/Todo.html
@@ -15,6 +15,8 @@
                 <li><span class="trash"><i class="fas fa-trash-alt"></i></span> vedant1</li>
                 <li><span class="trash"><i class="fas fa-trash-alt"></i></span> vedant2</li>
                 <li><span class="trash"><i class="fas fa-trash-alt"></i></span> vedant3</li>
+                <li><span class="trash"><i class="fas fa-trash-alt"></i></span> Tushar4</li>
+                <li><span class="trash"><i class="fas fa-trash-alt"></i></span> Tushar5</li>
             </ul>
         </div>
         <script src="assets/js/todoj.js"></script>
